--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -15,6 +15,8 @@
 
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="../javascripts/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="../javascripts/jquery.noty.packaged.min.js"></script>
+    <script type="text/javascript" src="../javascripts/jquery-ui.js"></script>
     <script type="text/javascript" src="../javascripts/materialize.min.js"></script>
     <script type="text/javascript" src="../javascripts/datatables.min.js"></script>
     <script type="text/javascript" src="../javascripts/script.js"></script>
