--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -55,5 +55,14 @@
     </div>
     </main>
 </body>
+<script>
+    var message = '<%=message%>'
+    var messageType = '<%=messageType%>'
+    if(message===''||message===null||typeof message==='undefined'){
+
+    }else{
+        displayMessage(message, messageType, 4000)
+    }
+</script>
 
 <% include ../layouts/footer.ejs %>
