--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -51,7 +51,7 @@
                                     <div class="row">
                                         <div class="input-field col l6 m6 s12">
                                             <select id="manager" name="manager" class="icons">
-                                                <option data-icon="../images/user.png" class="left circle" selected> None </option>
+                                                <option data-icon="../images/user.png" class="left circle" value="0" selected> None </option>
                                                 <% users.forEach(function(user){
                                                     if(user.RoleId == 2) {
                                                 %>
