--- a/views/user/list.ejs
+++ b/views/user/list.ejs
@@ -24,8 +24,8 @@
                         <th> S. No. </th>
                         <th> Name </th>
                         <th> Email </th>
-                        <th> View </th>
-                        <th> Edit </th>
+                        <th> Category </th>
+                        <th> Managed By </th>
                         <th> Delete </th>
                     </thead>
                     <tbody>
@@ -35,18 +35,15 @@
                         <td> <%= i++ %> </td>
                         <td> <%= user.name %> </td>
                         <td> <%= user.email + "@deerwalk.edu.np"%> </td>
-                        <td>
-                            <a href="/user/profile?id=<%= user.id %>" class="btn-floating btn waves-effect waves-light dw-blue-1">
-                                <i class="material-icons">visibility</i>
-                            </a>
-                        </td>
+                        <td> <%= user.category%> </td>
+                        <td>N/A</td>
                         <td>
                             <a href="/user/edit?id=<%= user.id %>" class="btn-floating btn waves-effect waves-light dw-green-1">
                                 <i class="material-icons">edit</i>
                             </a>
                         </td>
                         <td>
-                            <a href="/user/edit" class="btn-floating btn waves-effect waves-light red">
+                            <a href="/user/delete?id=<%= user.id %>" class="btn-floating btn waves-effect waves-light red">
                                 <i class="material-icons">delete</i>
                             </a>
                         </td>
@@ -64,5 +61,13 @@
     </div>
 </main>
 </body>
+<script>
+    var message = '<%=message%>'
+    var messageType = '<%=messageType%>'
+    if(message===''||message===null||typeof message==='undefined'){
 
+    }else{
+        displayMessage(message, messageType, 4000)
+    }
+</script>
 <% include ../layouts/footer.ejs %>
