--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -75,12 +75,12 @@
                                 <ul class="collection">
                                     <li class="collection-item avatar">
                                         <img src="../images/user.png" alt="" class="circle">
-                                        <p>User Count</p>
+                                        <p>Users</p>
                                         <span class="secondary-content text-dw-green-1"><%= users %></span>
                                     </li>
                                     <li class="collection-item avatar">
                                         <i class="material-icons circle red">flag</i>
-                                        <p>Goal Count</p>
+                                        <p>Completed Goals</p>
                                         <span class="secondary-content text-dw-green-1"><%= goals %></span>
                                     </li>
                                     <li class="collection-item avatar">
@@ -99,5 +99,4 @@
     </div>
 </main>
 </body>
-
 <% include ../layouts/footer.ejs %>
