--- a/views/award/list.ejs
+++ b/views/award/list.ejs
@@ -39,8 +39,8 @@
 </main>
 </body>
 <script>
-    var message = '<%=message%>'
-    var messageType = '<%=messageType%>'
+    let message = '<%=message%>'
+    let messageType = '<%=messageType%>'
     if(message===''||message===null||typeof message==='undefined'){
 
     }else{
