--- a/views/user/subordinates.ejs
+++ b/views/user/subordinates.ejs
@@ -5,6 +5,11 @@
     <div class="container-fluid">
         <br><br>
         <div class="row">
+            <div class="col l4">
+                <a href="/goal/all-subordinate-goals" class="btn dw-green-1"> View All Subordinate Goals </a>
+            </div>
+        </div>
+        <div class="row">
             <% subordinates.forEach(function(subordinate){ %>
             <div class="col l4 s12 m4">
                 <div class="card">
