--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,9 +4,7 @@
     <main>
     <div class="container">
         <div class="row">
-            <div class="col s12 m2 l7">
-            </div>
-            <div class="col s12 m8 l5" style="margin-top: 5%">
+            <div class="col s12 m10 l8 offset-l2 offset-m1" style="margin-top: 2%">
                 <div class="center-align">
                     <img src="../images/fav.png" style="height: 25%; width: 25%;">
                 </div>
@@ -27,18 +25,24 @@
                                 <form class="col s12" action="/auth" method="POST" autocomplete="off" onsubmit="return validateLoginForm();">
                                     <div class="row">
 
-                                        <div class="input-field col s8">
+                                        <div class="input-field col s6">
                                             <i class="material-icons prefix">account_circle</i>
                                             <input id="email" type="text" name="email" class="validate">
                                         </div>
-                                        <span id="mailText">@deerwalk.edu.np</span>
+                                        <div class="input-field col s6">
+                                            <select name="address" id="address">
+                                                <option> @deerwalk.edu.np </option>
+                                                <option> @sifal.deerwalk.edu.np </option>
+                                                <option> @deerwalkcompware.com </option>
+                                            </select>
+                                        </div>
                                         <div class="input-field col s12">
                                             <i class="material-icons prefix">lock</i>
                                             <input id="password" type="password" name="password" class="validate">
                                         </div>
 
                                         <div class="input-field col s12 center">
-                                            <button id="submit" type="submit" class="dw-blue-1 btn waves-effect">
+                                            <button id="submit" type="submit" class="dw-green-1 btn waves-effect">
                                                 Login
                                             </button>
                                         </div>
@@ -56,13 +60,12 @@
     </main>
 </body>
 <script>
-    var message = '<%=message%>'
-    var messageType = '<%=messageType%>'
-    if(message===''||message===null||typeof message==='undefined'){
+    let message = '<%=message%>'
+    let messageType = '<%=messageType%>'
+    if (message===''||message=== null||typeof message==='undefined'){
 
     }else{
         displayMessage(message, messageType, 4000)
     }
 </script>
-
 <% include ../layouts/footer.ejs %>
