--- a/views/goal/list.ejs
+++ b/views/goal/list.ejs
@@ -12,14 +12,40 @@
             <h4>Progress Update Log</h4>
                 <input type="hidden" id="progressGoalId" name="progressGoalId">
                 <input type="hidden" id="progressValue">
+                <input type="hidden" id="progressMade">
                 <textarea class="materialize-textarea" id="progressRemark" name="progressRemark">
                 </textarea>
                 <label for="progressRemark">Remark</label>
         </div>
         <div class="modal-footer">
-            <a href="#" class="modal-close waves-effect waves-green btn-flat red darken-1 white-text" onclick="$('#logModal').hide();">Cancel</a>
+            <a href="" class="modal-close waves-effect waves-green btn-flat red darken-1 white-text" onclick="$('#logModal').hide(); location.reload();">Cancel</a>
             <button class="modal-close waves-effect waves-green btn-flat dw-green-1 white-text" onclick="updateProgress()">Update</button>
         </div>
+    </form>
+</div>
+<!-- Modal Remark -->
+<div id="remarkModal" class="modal">
+    <div class="modal-content">
+        <h4>
+            Remarks <i class="material-icons modal-close" style="position: relative; float: right;" onclick="document.getElementById('allRemarks').innerHTML = '' ">close</i>
+        </h4>
+        <form action="/remark/create" method="post">
+            <input type="hidden" id="goalIdForRemark" name="goalIdForRemark">
+            <input type="hidden" id="userId" name="userId" value="<%= sess.userId %>">
+            <input type="hidden" id="list" name="list" value="true">
+            <ul class="collection" id="allRemarks"></ul>
+            <ul class="collection">
+                <li class="collection-item avatar">
+                    <i class='material-icons circle dw-blue-1'>comment</i>
+                    <input name="remark" type="text" id="remark" autocomplete="off" placeholder="Write your remark here" autofocus>
+                </li>
+            </ul>
+    </div>
+    <div class="modal-footer">
+        <button class="modal-close waves-effect waves-green btn-flat dw-green-1 white-text align-center">
+            Add Remark
+        </button>
+    </div>
     </form>
 </div>
 <body class="bg">
@@ -50,17 +76,95 @@
                                 <div class="col l12 s12 m12">
                                     <table>
                                         <thead>
-                                        <th> S. No. </th>
-                                        <th> Goal </th>
-                                        <th> Set Date </th>
-                                        <th> Status </th>
-                                        <th> Deadline </th>
-                                        <th> </th>
+                                            <th style="width: 1%;"> S. No. </th>
+                                            <th style="width: 40%;"> Goal </th>
+                                            <th style="width: 10%;"></th>
+                                            <th style="width: 15%;"> Set Date </th>
+                                            <th style="width: 20%;"> Status </th>
+                                            <th style="width: 10%;"> Deadline </th>
                                         </thead>
                                         <tbody>
                                         <% i = 1 %>
                                         <% goals.forEach(function (goal) {
                                             if(goal.goalType === "ORGANIZATIONAL") {
+                                        %>
+                                        <tr class="<% if(goal.goalStatus==="REJECTED"){%>red darken-5<% } else { %> dw-blue-5<% }%>" style="border-bottom: 0px">
+                                            <td> <%= i++ %> </td>
+                                            <td colspan="2"> <%= goal.goal %> </td>
+                                            <td> <%= goal.setDate %> </td>
+                                            <td> <%= goal.goalStatus %> </td>
+                                            <td> <%= goal.deadline %> </td>
+                                        </tr>
+                                        <% if (goal.goalStatus !== "PENDING") { %>
+                                        <% if (goal.goalStatus !== "REJECTED") { %>
+                                        <tr>
+                                            <td colspan="2">
+                                                <b> Progress </b>
+                                                <form>
+                                                    <!--class="tooltipped" data-position="right" data-tooltip="goal.progress %"-->
+                                                    <p class="range-field" style="margin-left: 5%; margin-right: 5%;">
+                                                        <input type="range"
+                                                               id="progress<%= goal.id %>" value="" min="0" max="100"
+
+                                                               onchange="logModal(<%= goal.id %>)"/>
+                                                    </p>
+                                                </form>
+                                            </td>
+                                            <td class="center-align">
+                                                <a href="/goal/view-log?id=<%= goal.id %>"
+                                                   class="btn btn-flat dw-green-1">
+                                                    View Log
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <% if (goal.goalStatus === "COMPLETED") { %>
+                                                <b> Award </b>
+                                                <span id="awardIcon<%= goal.id %>"></span>
+                                                <script type="text/javascript">
+                                                    $(document).ready(function(){
+                                                        getAward(<%= goal.id %>, <%= goal.AwardId %>);
+                                                    });
+                                                </script>
+                                                <% } %>
+                                            </td>
+                                            <td>
+                                                <% if (goal.approvedDate) {%>
+                                                <b> Approved Date </b>
+                                                <%= goal.approvedDate %>
+                                                <% } %>
+                                            </td>
+                                            <td class="center-align">
+                                                <a class="modal-trigger text-dw-green-1" href="#remarkModal" onclick="getRemarks(<%= goal.id %>)">
+                                                    <i class="material-icons">visibility</i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <%
+                                                    }
+                                                }
+                                            }
+                                        }) %>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="personal">
+                            <div class="row">
+                                <div class="col l12 s12 m12">
+                                    <table>
+                                        <thead>
+                                            <th style="width: 1%;"> S. No. </th>
+                                            <th style="width: 40%;"> Goal </th>
+                                            <th style="width: 10%;"></th>
+                                            <th style="width: 15%;"> Set Date </th>
+                                            <th style="width: 20%;"> Status </th>
+                                            <th style="width: 10%;"> Deadline </th>
+                                        </thead>
+                                        <tbody>
+                                        <% i = 1 %>
+                                        <% goals.forEach(function (goal) {
+                                        if(goal.goalType === "PERSONAL") {
                                         %>
                                         <tr class="<% if(goal.goalStatus==="REJECTED"){%>red darken-5<% } else { %> dw-blue-5<% }%>" style="border-bottom: 0px">
                                             <td> <%= i++ %> </td>
@@ -80,7 +184,7 @@
                                                         <input type="range" class="tooltipped" data-position="right" data-tooltip="<%= goal.progress %>%"
                                                                id="progress<%= goal.id %>" value="<%= goal.progress %>" min="0" max="100"
                                                                 <% if (goal.goalStatus === 'COMPLETED') {%> disabled <% }%>
-                                                               onchange="logModal(<%= goal.id %>)"/>
+                                                               onchange="logModal(<%= goal.id %>, <%= goal.progress %>)"/>
                                                     </p>
                                                 </form>
                                             </td>
@@ -107,78 +211,10 @@
                                                 <%= goal.approvedDate %>
                                                 <% } %>
                                             </td>
-                                        </tr>
-                                        <%
-                                                    }
-                                                }
-                                            }
-                                        }) %>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="personal">
-                            <div class="row">
-                                <div class="col l12 s12 m12">
-                                    <table>
-                                        <thead>
-                                        <th> S. No. </th>
-                                        <th> Goal </th>
-                                        <th> Set Date </th>
-                                        <th> Status </th>
-                                        <th> Deadline </th>
-                                        <th> </th>
-                                        </thead>
-                                        <tbody>
-                                        <% i = 1 %>
-                                        <% goals.forEach(function (goal) {
-                                        if(goal.goalType === "PERSONAL") {
-                                        %>
-                                        <tr class="<% if(goal.goalStatus==="REJECTED"){%>red darken-5<% } else { %> dw-blue-5<% }%>" style="border-bottom: 0px">
-                                            <td> <%= i++ %> </td>
-                                            <td> <%= goal.goal %> </td>
-                                            <td> <%= goal.setDate %> </td>
-                                            <td> <%= goal.goalStatus %> </td>
-                                            <td> <%= goal.deadline %> </td>
-                                            <td> <i class="material-icons tooltipped" data-position="top" data-tooltip="Remarks">visibility</i> </td>
-                                        </tr>
-                                        <% if (goal.goalStatus !== "PENDING") { %>
-                                        <% if (goal.goalStatus !== "REJECTED") { %>
-                                        <tr>
-                                            <td colspan="2">
-                                                <b> Progress </b>
-                                                <form>
-                                                    <p class="range-field" style="margin-left: 5%; margin-right: 5%;">
-                                                        <input type="range" class="tooltipped" data-position="right" data-tooltip="<%= goal.progress %>"
-                                                               id="progress<%= goal.id %>" value="<%= goal.progress %>" min="0" max="100"
-                                                                <% if (goal.goalStatus === 'COMPLETED') {%> disabled <% }%>
-                                                               onchange="logModal(<%= goal.id %>)"/>
-                                                    </p>
-                                                </form>
-                                            </td>
-                                            <td class="right-align">
-                                                <a href="/goal/log/view?id=<%= goal.id %>"
-                                                   class="btn btn-flat dw-green-1">
-                                                    View Log
+                                            <td class="center-align">
+                                                <a class="modal-trigger text-dw-green-1" href="#remarkModal" onclick="getRemarks(<%= goal.id %>)">
+                                                    <i class="material-icons">visibility</i>
                                                 </a>
-                                            </td>
-                                            <td colspan="2">
-                                                <% if (goal.goalStatus === "COMPLETED") { %>
-                                                <b> Award </b>
-                                                <span id="awardIcon<%= goal.id %>"></span>
-                                                <script type="text/javascript">
-                                                    $(document).ready(function(){
-                                                        getAward(<%= goal.id %>, <%= goal.AwardId %>);
-                                                    });
-                                                </script>
-                                                <% } %>
-                                            </td>
-                                            <td>
-                                                <% if (goal.approvedDate) {%>
-                                                <b> Approved Date </b>
-                                                <%= goal.approvedDate %>
-                                                <% } %>
                                             </td>
                                         </tr>
                                         <%
@@ -199,4 +235,13 @@
     </div>
 </main>
 </body>
+<script>
+    let message = '<%=message%>'
+    let messageType = '<%=messageType%>'
+    if(message===''||message===null||typeof message==='undefined'){
+
+    }else{
+        displayMessage(message, messageType, 4000)
+    }
+</script>
 <% include ../layouts/footer.ejs %>
