--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,8 +1,8 @@
 <header>
 <nav>
     <div class="nav-wrapper dw-blue-2">
-        <a href="#!" class="brand-logo"><i class="material-icons"></i>My Goals</a>
-        <ul class="right hide-on-med-and-down">
+        <a href="" class="brand-logo"><i class="material-icons"></i>My Goals</a>
+        <ul class="right hide-on-med-and-down" style="margin-right: 3%;">
             <li>
                 <a>
                     <i class="material-icons tooltipped" data-position="bottom" data-tooltip="Go Back" onclick="window.history.back();">reply_all</i>
@@ -15,7 +15,7 @@
             </li>
             <li>
                 <a href="/logout">
-                    <i class="material-icons tooltipped" data-position="bottom" data-tooltip="Logout">settings_power</i>
+                    <i class="material-icons tooltipped" data-position="bottom" data-tooltip="Logout">power_settings_new</i>
                 </a>
             </li>
         </ul>
