--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -45,13 +45,16 @@
                                         </div>
 
                                         <div class="input-field col l6 m6 s12">
-                                            <h6>@deerwalk.edu.np</h6>
+                                            <select name="address" id="address">
+                                                <option> @deerwalk.edu.np </option>
+                                                <option> @sifal.deerwalk.edu.np </option>
+                                                <option> @deerwalkcompware.com </option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col l6 m6 s12">
                                             <select id="manager" name="manager" class="icons">
-                                                <option data-icon="../images/user.png" class="left circle" value="0" selected> None </option>
                                                 <% users.forEach(function(user){
                                                     if(user.RoleId == 2) {
                                                 %>
@@ -65,15 +68,21 @@
                                         </div>
 
                                         <div class="input-field col l6 m6 s12 center-align">
-                                            <div class="switch">
-                                                Employee
+                                            <p>
                                                 <label>
-                                                    <input type="checkbox" name="category">
-                                                    <span class="lever"></span>
+                                                    <input class="with-gap" name="category" type="radio"  value="FULL_TIME" checked/>
+                                                    <span>Full Time</span>
                                                 </label>
-                                                Student
-                                            </div>
-                                            <br>
+                                                <label>
+                                                    <input class="with-gap" name="category" type="radio"  value="PART_TIME"/>
+                                                    <span>Part Time</span>
+                                                </label>
+                                                <label>
+                                                    <input class="with-gap" name="category" type="radio"  value="INTERN"/>
+                                                    <span>Intern</span>
+                                                </label>
+                                            </p>
+                                            <br><br>
                                             <div class="switch">
                                                 User
                                                 <label>
