--- a/views/user/list.ejs
+++ b/views/user/list.ejs
@@ -25,8 +25,8 @@
                         <th> Name </th>
                         <th> Email </th>
                         <th> Category </th>
-                        <th> Managed By </th>
-                        <th> Delete </th>
+                        <th> Manager </th>
+                        <th colspan="2"> Actions </th>
                     </thead>
                     <tbody>
                     <% i = 1 %>
@@ -34,9 +34,20 @@
                     <tr class="transparent">
                         <td> <%= i++ %> </td>
                         <td> <%= user.name %> </td>
-                        <td> <%= user.email + "@deerwalk.edu.np"%> </td>
+                        <td> <%= user.email %> </td>
                         <td> <%= user.category%> </td>
-                        <td>N/A</td>
+                        <td>
+                            <% if (user.ManagerId) { %>
+                            <span id="managerOf<%= user.id %>"></span>
+                            <script type="text/javascript">
+                                $(document).ready(function(){
+                                    getManager(<%= user.id %>);
+                                });
+                            </script>
+                            <% } else { %>
+                            <span id="managerOf<%= user.id %>"> N/A </span>
+                            <% } %>
+                        </td>
                         <td>
                             <a href="/user/edit?id=<%= user.id %>" class="btn-floating btn waves-effect waves-light dw-green-1">
                                 <i class="material-icons">edit</i>
@@ -62,9 +73,9 @@
 </main>
 </body>
 <script>
-    var message = '<%=message%>'
-    var messageType = '<%=messageType%>'
-    if(message===''||message===null||typeof message==='undefined'){
+    let message = '<%=message%>'
+    let messageType = '<%=messageType%>'
+    if (message===''||message=== null||typeof message==='undefined'){
 
     }else{
         displayMessage(message, messageType, 4000)
